@@ -4,6 +4,8 @@ v 1.4.2
 	#237 - Set Timepicker to 24 hour format.
 	Add a new method unset_view that is just an alias to unset_read method.
 	Multiple search fields for flexibility for future themes.
+	Multiple delete fields for flexibility for future themes.
+	This version is Bootstrap 3 theme ready.
 	Add $subject_plural as a second parameter to the set_subject method.
 	Add 2 new functions:
 		- unset_read_fields
